# Vertex-cover-problem

./: README.md
Project/: CMakeLists.txt  cnf_sat_refactor.cpp  project_satoshi.cpp  user.yml
Project/inputs/: 17v_graphs.in  20v_graph.in  20v_to_100v_graphs.in  20v_to_50v_graphs.in  5-10-15_graphs.in  5v_to_2000v_graphs.in  ALL_graphs.in  gen_inputs.py
a1/: a1ece650.py  a1test.py  user.yml
a2/: a.out  a2testfile.cpp  ece650-a2.cpp
a3/: CMakeLists.txt  a.out  a1ece650.py  a2ece650  a2ece650.cpp  a3ece650  a3ece650.cpp  log.txt  rgen  rgen.cpp  test  test.cpp  user.yml  using_pipe.cpp
a4/: CMakeLists.txt  ece650-a4.cpp  test.cpp  user.yml
